fixed bugs from previous merge * changed css for navbar-wrapper so content for pages isn't covered by navbar * fixed pages so titlebar isn't at bottom of page (see README for details on how   to format page files * fixed slidebar bug (it kept disappearing after the last picture was shown)

--- a/css/layout.css
+++ b/css/layout.css
@@ -56,9 +56,8 @@ border-radius: 500px;
 .navbar-wrapper {
 
     left: 0;
-    margin-bottom: -90px;
     margin-top: 0px;
-    position: absolute;
+    position: relative;
     right: 0;
     top: 0;
     z-index: 10;
